# Speechmaster

./: .gitignore  README.md  RESULTS.md  environment.yml  pyproject.toml  requirements.txt
configs/: low_resource_finetune.yaml  main_asr.yaml
contrib/wavlm_probe/: README.md
docs/: assignment_compliance.md  references.md
paper/: main.tex  overview_image_prompt.md
paper/figures/: speechmaster_overview.tex
results/metrics/: heavy_hubert_large_final.json  heavy_hubert_units_layer-1.json  heavy_hubert_units_layer-4.json  heavy_hubert_units_layer-8.json  heavy_route_ablation.json  heavy_speechmaster_car.json  heavy_speechmaster_router.json  heavy_wav2vec2_base_final.json  heavy_wav2vec2_base_last4.json  heavy_wav2vec2_base_midlast.json  heavy_wav2vec2_large_lv60_final.json  hubert_final.json  hubert_units.json  route_ablation.json  smoke_wav2vec2.json  speechmaster_router.json  test_clean_hubert_large_final.json  test_clean_route_ablation.json  test_clean_speechmaster_car.json  test_clean_speechmaster_router.json  test_clean_wav2vec2_base_final.json  test_clean_wav2vec2_large_lv60_final.json  wav2vec2_final.json  wav2vec2_last4.json  wavlm_probe_reported.json
results/predictions/: heavy_hubert_large_final.jsonl  heavy_speechmaster_router.jsonl  heavy_wav2vec2_base_final.jsonl  heavy_wav2vec2_base_last4.jsonl  heavy_wav2vec2_base_midlast.jsonl  heavy_wav2vec2_large_lv60_final.jsonl  (+9 more)
scripts/: build_paper.sh  run_heavy_experiments.sh  run_low_resource_grid.sh  run_low_resource_train.sh  run_main_experiments.sh  run_smoke_eval.sh  run_test_clean_experiments.sh
(+48 files in other folders)
