[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-asr-icassp"
version = "0.1.0"
description = "Low-resource ASR with self-supervised speech representations"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

